# project-core

./: Cargo.toml  build.rs
proto/device_irs/: video.proto
src/: command_dispatcher.rs  main.rs  tcp_server.rs
