[package]
name = "project-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"

[build-dependencies]
prost-build = "0.13"